2833.	[bug]		Cross compiling was broken due to calling genrandom at
			build time. [RT #35869]

3832.	[func]		"named -L <filename>" causes named to send log
			messages to the specified file by default instead
			of to the system log. (Thanks to Tony Finch.)
			[RT #35845]

3831.	[cleanup]	Reduce logging noise when EDNS state changes occur.
			[RT #35843]

3830.	[func]		When query logging is enabled, log query errors at
			the same level ('info') as the queries themselves.
			[RT #35844]

3829.	[func]		"dig +ttlunits" causes dig to print TTL values
			with time-unit suffixes: w, d, h, m, s for
			weeks, days, hours, minutes, and seconds. (Thanks
			to Tony Finch.) [RT #35823]

3828.	[placeholder]

3827.	[func]		"dnssec-signzone -N date" updates serial number
			to the current date in YYYYMMDDNN format.
			[RT #35800]

3826.	[bug]		Corrected bad INSIST logic in isc_radix_remove().
			[RT #35870]

3825.	[bug]		Address sign extension bug in isc_regex_validate.
			[RT #35758]

3824.	[bug]		A collision between two flag values could cause
			problems with cache cleaning when SIT was enabled.
			[RT #35858]

3823.	[func]		Log the rpz cname target when rewriting. [RT #35667]

3822.	[bug]		Log the correct type of static-stub zones when
			removing them. [RT #35842]

3821.	[contrib]	Added a new "mysqldyn" DLZ module with dynamic
			update and transaction support. Thanks to Marty
			Lee for the contribution. [RT #35656]

3820.	[func]		The DLZ API doesn't pass the database version to
			the lookup() function; this can cause DLZ modules
			that allow dynamic updates to mishandle prerequisite
			checks. This has been corrected by adding a
			'dbversion' field to the dns_clientinfo_t
			structure. [RT #35656]

3819.	[bug]		NSEC3 hashes need to be able to be entered and
			displayed without padding.  This is not a issue for
			currently defined algorithms but may be for future
			hash algorithms. [RT #27925]

3818.	[bug]		Stop lying to the optimizer that 'void *arg' is a